--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<div id="container">
 		<body id="body">
 
-		<p>Thank you for visiting my website, but we're under construction at the moment.</p>
+		<p>Thank you for visiting my website <br> but we're under construction at the moment.</p>
 
 		</body>
 	</div>
